--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 
 <footer>
-<ul><li><a href="#">ABOUT THE CONTEST</a></li><li>|</li><li><a href="#">TERMS AND CONDITION</a></li></ul>
+<ul><li><a href="#">ABOUT THE CONTEST</a></li><li>|</li><li><a href="#">Terms & Conditions</a></li></ul>
 
 </footer>
 </body>
