--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" ></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="<?php echo $GLOBALS['url'];?>js/main.js?<?php echo $GLOBALS['bpc'];?>"></script>
 
 
 <div id="dialog" title="About the Contest" style="display:none">
