--- a/about.html
+++ b/about.html
@@ -1,25 +1,18 @@
 <p>
-"A Table for You" is a Facebook contest by American Express, at Cyber Hub, Gurgaon. 
-The contest encourages users to complete the caption "A Table For" or click and upload photos on Facebook while dining at Cyber Hub, submit selected photos or captions through the contest application, share it on their own facebook timeline and get votes from friends. 
- Contestants with highest votes for their caption/ photo stand a chance to win exciting prizes. 
- This 4-week long campaign will start from XX XXXX 2014 and end on XX XXXX 2014. 
- 6 participants(3 each) with maximum votes in a week shall win American Express Gift Cards worth Rs. 2000 - for a table for two at Cyber Hub.
-</p>
-<p><b>How to participate:</b><br/>
- All Facebook users, above the age of 21, who are residents of India, are eligible to participate.
- To enter the contest, the participant needs to visit the American Express India page on Facebook and click on the 'A Table for You' tab.
-Participant will need to give permission to the application to access information and post on it's behalf. 
-To upload a picture, participant can submit a selfie for the contest and share it with friends on Facebook, Twitter, and LinkedIn. 
-To write a caption, the participant will need to enter a caption in the app and share it with friends on Facebook, Twitter, and LinkedIn.
- The photo or caption with the highest 'votes' in each category will stand a chance to win.
-</p>
-<p><b>How to win:</b><br/>
-
-There will be three winners for selfies & three winners for captions every week, on the basis of the votes.
-The captions submitted by participants shall be chosen by a jury comprising American Express employees and be used in hoardings and marketing collateral around Cyber Hub with due credit to the submitter. The decision of American Express, in this regard, shall be final and binding.
-Once a contestant has won, he shall not be eligible to participate in the contest in the next or following weeks.
- Lucky winners will be informed via the e-mail ID shared on Facebook.
- In case of a tie, the American Express jury will select the winner based on photo or caption and description that the participant has shared through Facebook.
- American Express reserves the right to delete photo and caption entries which do not comply with the Facebook code of conduct or do not align with the Table For theme.
+"#ATableFor" is a Facebook contest by American Express. The contest encourages users to complete the phrase "#ATableFor" or click and upload photos on Facebook while dining at Cyber Hub, submit selected photos or phrases through the contest application, share it on their own Facebook timeline and get votes from friends. 
+Contestants with highest votes for their phrase / photo stand a chance to win exciting prizes. This 4-week long campaign will start from XX XXXX 2014 and end on XX XXXX 2014. Six participants (3 each) with maximum votes in a week shall win American Express Gift Cards worth Rs. 2000
+</p><br/>
+<p>
+<strong>How to participate</strong>: 
+All Facebook users, above the age of 21, who are residents of India, are eligible to participate. 
+To enter the contest, a participant needs to visit the American Express India page on Facebook and click on the '#ATableFor' tab. Participant will need to give permission to the application to access information and post on its behalf. 
+To upload a picture, participant can submit a selfie for the contest and share it with friends on Facebook and Twitter, to complete the phrase, the participant will need to enter a phrase in the app and share it with friends on Facebook and Twitter. 
+The photo or the phrase with the highest 'votes' in each category will stand a chance to win.
+</p><br/>
+<p><strong>How to win</strong>: 
+There will be three winners for selfies & three winners for phrases every week, on the basis of the votes. Once a contestant has won, he shall not be eligible to participate in the contest in the same week.
+Lucky winners will be announced on the American Express Facebook page. 
+In case of a tie, the American Express jury will select the winner based on photo or phrase and description that the participant has shared through Facebook. 
+American Express reserves the right to delete entries which do not comply with the Facebook code of conduct or do not align with the contest theme.
 </p>
 
