--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <p>
 "#ATableFor" is a Facebook contest by American Express. The contest encourages users to complete the phrase "#ATableFor" or click and upload photos on Facebook while dining at Cyber Hub, submit selected photos or phrases through the contest application, share it on their own Facebook timeline and get votes from friends. 
-Contestants with highest votes for their phrase / photo stand a chance to win exciting prizes. This 4-week long campaign will start from XX XXXX 2014 and end on XX XXXX 2014. Six participants (3 each) with maximum votes in a week shall win American Express Gift Cards worth Rs. 2000
+Contestants with highest votes for their phrase / photo stand a chance to win exciting prizes. This 4-week long campaign will start from 1<sup>st</sup> August 2014 and end on 31<sup>st</sup> August 2014. Six participants (3 each) with maximum votes in a week shall win American Express Gift Cards worth Rs. 2000
 </p><br/>
 <p>
 <strong>How to participate</strong>: 
